--- a/style.sass
+++ b/style.sass
@@ -74,15 +74,13 @@ body
         cursor: pointer
         transition: background-color 0.3s, color 0.3s
 
-    .addBtn:hover
+    .addBtn:hover:not([disabled])
         background-color: $dark-color
         color: $light-color
 
 .listContainer
     padding: 20px
     margin: 0 0 15px 0
-    min-height: 100%
-    transition: max-height 0.2s
 
     .optionsWrapper
         display: flex
@@ -109,7 +107,7 @@ body
                 color: $dark-color
                 transition: background-color 0.3s, box-shadow 0.3s, transform 0.3s
 
-            button:hover
+            button:hover:not([disabled])
                 background-color: $dark-color
                 color: #e7dede
                 box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.4)
@@ -121,7 +119,7 @@ body
                 box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.4)
                 transform: translate(-2px, -5%)
 
-            button:active
+            button:active:not([disabled])
                 transform: translateY(2px)
                 box-shadow: 3px 1px 3px rgba(0, 0, 0, 0.4)
 
@@ -135,12 +133,14 @@ body
 
     ul
         margin: 0
-        padding: 0
+        padding: 5px
 
+        // overflow: hidden
     li
         display: flex
         flex-direction: column
         list-style: none
+        height: 100%
         padding: 10px 15px
         margin: 20px 0px
         border-radius: 5px
@@ -203,9 +203,10 @@ body
         text-align: left
 
         .task
-            margin: 10px 2px
+            margin: 10px 5px
             padding: 7px
-            text-align: center
+            // text-align: center
+            width: 100%
             font-size: 20px
             letter-spacing: 1px
             text-shadow: 2px 2px 2px rgba(143, 143, 143, 0.6)
@@ -223,12 +224,12 @@ body
 
         .tools
             display: flex
-            justify-content: space-between
+            // justify-content: space-between
             // display: none
 
             button
-                padding: 10px
-                margin: 0 5px
+                padding: 7px
+                margin: 0 4px
                 // max-width: 52px
                 border: none
                 border-radius: 5px
@@ -237,7 +238,7 @@ body
                 background: none
                 transition: background-color 0.3s, box-shadow 0.3s, transform 0.3s
 
-            button:hover
+            button:hover:not([disabled])
                 background-color: #e7dede
                 box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.4)
                 transform: translate(-2px, -5%)
@@ -254,3 +255,40 @@ body
 
             .btnHide
                 display: none
+
+.animateTask
+    animation: prependAnimate 0.5s ease-out
+
+.removeTask
+    animation: removeAnimate 0.5s ease-in
+
+.fadeInAnimate
+    animation: fadeInAnimate 0.4s, easy-out
+
+@keyframes prependAnimate
+    0%
+        opacity: 0
+        transform: translateY(-50%)
+    100%
+        opacity: 1
+        transform: translateY(0%)
+
+@keyframes fadeInAnimate
+    0%
+        opacity: 0
+        transform: translateY(-5%)
+    100%
+        opacity: 100
+        transform: translateY(0%)
+
+@keyframes removeAnimate
+    0%
+        opacity: 1
+        transform: translateX(0%)
+
+    20%
+        transform: translateX(3%)
+
+    100%
+        opacity: 0
+        transform: translateX(-100%)
